--- a/1692791931888.yml
+++ b/1692791931888.yml
@@ -15,6 +15,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - US-ColoCrossing-San_Jose-Trojan1
+      - US-ColoCrossing-San_Jose-Trojan2
+      - US-ColoCrossing-San_Jose-Trojan3
       - DIRECT
   - name: ♻️ 自动选择
     type: url-test
