--- a/1692791931888.yml
+++ b/1692791931888.yml
@@ -3,7 +3,7 @@ socks-port: 7891
 allow-lan: true
 mode: Rule
 log-level: info
-external-controller: :9090
+external-controller: 127.0.0.1:8228
 proxies:
   - {name: US-ColoCrossing-San_Jose-Trojan1, type: trojan, server: cl5.lovelves.top, port: 2087, password: 0f35ade2-4108-40fd-b0e3-d37902e17ac0, udp: true, tls: true, sni: iran-thanks-convenient-graduation.trycloudflare.com, skip-cert-verify: false, network: ws, ws-opts: { path: /argo-trojan?ed=2048, headers: { Host: iran-thanks-convenient-graduation.trycloudflare.com } } }
   - {name: US-ColoCrossing-San_Jose-Trojan2, type: trojan, server: cl4.lovelves.top, port: 2087, password: 0f35ade2-4108-40fd-b0e3-d37902e17ac0, udp: true, tls: true, sni: iran-thanks-convenient-graduation.trycloudflare.com, skip-cert-verify: false, network: ws, ws-opts: { path: /argo-trojan?ed=2048, headers: { Host: iran-thanks-convenient-graduation.trycloudflare.com } } }
